--- a/documentation/Test Functions/TestFunctions.tex
+++ b/documentation/Test Functions/TestFunctions.tex
@@ -20,7 +20,7 @@
 
 	\section*{Ackley Function}
 		\begin{equation*}
-			f(x) = 20 + e - 20 \cdot e^{\frac{1}{5} \sqrt{\frac{1}{n} \sum_{i=1}^n x_i^2}} - e^{\frac{1}{n} \sum_{i=1}^n \cos(2 \pi x_i)}
+			f(x) = 20 + e - 20 \cdot e^{-\frac{1}{5} \sqrt{\frac{1}{n} \sum_{i=1}^n x_i^2}} - e^{\frac{1}{n} \sum_{i=1}^n \cos(2 \pi x_i)}
 		\end{equation*}
 
 		\begin{tabbing}
@@ -29,31 +29,33 @@
 			\textbf{Domain:}         \> $-32.768 \leq x_i \leq 32.768$ \\
 			\textbf{Global Optimum:} \> $f(x) = 0.0$ at $x = (0.0, 0.0, \dots, 0.0)$ \\
 			\textbf{Operator:}       \> AckleyEvaluator \\
-			\textbf{Chart:}          \> \\
+			\textbf{Charts:}         \> \\
 		\end{tabbing}
 
 		\begin{center}
-			\includegraphics[width=0.6\textwidth]{Images/Ackley}
+			\includegraphics[width=0.45\textwidth]{Images/Ackley_large}
+			\hfill
+			\includegraphics[width=0.45\textwidth]{Images/Ackley_small}
 		\end{center}
 
-	\section*{Beale Function}
+	\section*{Griewangk Function}
 		\begin{equation*}
-			f(x) = (1.5 - x_1 (1 - x_2))^2 + (2.25 - x_1 (1 - x_2^2))^2 + (2.625 - x_1 (1 - x_2^3))^2
+			f(x) = 1 + \sum_{i=1}^n \frac{x_i^2}{4000} - \prod_{i=1}^n cos(\frac{x_i}{\sqrt i})
 		\end{equation*}
 
 		\begin{tabbing}
 			\hspace{5cm}\=\kill
-			\textbf{Dimensions:}     \> $2$ \\
-			\textbf{Domain:}         \> $-4.5 \leq x_i \leq 4.5$ \\
-			\textbf{Global Optimum:} \> $f(x) = 0.0$ at $x = (3.0, 0.5)$ \\
-			\textbf{Operator:}       \> BealeEvaluator \\
-			\textbf{Chart:}          \> \\
+			\textbf{Dimensions:}     \> $n$ \\
+			\textbf{Domain:}         \> $-600.0 \leq x_i \leq 600$ \\
+			\textbf{Global Optimum:} \> $f(x) = 0.0$ at $x = (0.0, 0.0, \dots, 0.0)$ \\
+			\textbf{Operator:}       \> GriewangkEvaluator \\
+			\textbf{Charts:}         \> \\
 		\end{tabbing}
 
 		\begin{center}
-			\includegraphics[width=0.6\textwidth]{Images/Ackley}
+			\includegraphics[width=0.45\textwidth]{Images/Griewangk_large}
+			\hfill
+			\includegraphics[width=0.45\textwidth]{Images/Griewangk_small}
 		\end{center}
-
-
 
 \end{document}
