--- a/documentation/Test Functions/TestFunctions.tex
+++ b/documentation/Test Functions/TestFunctions.tex
@@ -38,6 +38,8 @@
 			\includegraphics[width=0.45\textwidth]{Images/Ackley_small}
 		\end{center}
 
+	\newpage
+
 	\section*{Griewangk Function}
 		\begin{equation*}
 			f(x) = 1 + \sum_{i=1}^n \frac{x_i^2}{4000} - \prod_{i=1}^n cos(\frac{x_i}{\sqrt i})
