Fill ListView and TreeView with content (#380)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@844 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.Console/HiveServerManagementConsole.resx
+++ b/sources/HeuristicLab.Hive.Server.Console/HiveServerManagementConsole.resx
@@ -120,4 +120,87 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>126, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAM
+        EQAAAk1TRnQBSQFMAgEBAwEAAQUBAAEEAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABgAMAASADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEADvkDzw/5DjgDzw84
+        DigDzw8oIAAL+QG1Ae4B8AHxAfACvAEHAbUM+Qs4AbUB7gHwAfEB8AK8AQcBtQw4CygBtQHuAfAB8QHw
+        ArwBBwG1DCggAAn5Ae8C8APxAfABvALxAgcB7wr5CTgB7wLwA/EB8AG8AvECBwHvCjgJKAHvAvAD8QHw
+        AbwC8QIHAe8KKCAACPkBBwO8AfAC8QHwAbwB8QG8AgcB7wEHAa4I+Qg4AQcDvAHwAvEB8AG8AfEBvAIH
+        Ae8BBwGuCDgIKAEHA7wB8ALxAfABvAHxAbwCBwHvAQcBrggoIAAH+QQHAbwB8ALxAfABvAHwAgcC7wGS
+        Ae8I+Qc4BAcBvAHwAvEB8AG8AfACBwLvAZIB7wg4BygEBwG8AfAC8QHwAbwB8AIHAu8BkgHvCCggAAf5
+        Ae8EBwG8AvABvAMHAe8B9wLtAe8I+Qc4Ae8EBwG8AvABvAMHAe8B9wLtAe8IOAcoAe8EBwG8AvABvAMH
+        Ae8B9wLtAe8IKCAACPkFBwK8AgcB7wGSA+wB9wHsCPkIOAUHArwCBwHvAZID7AH3AewIOAgoBQcCvAIH
+        Ae8BkgPsAfcB7AgoIAAJ+QH3AQcD7wH3Ae0B7AHrAm0B7AH3Ae8C9wEHAa4F+Qk4AfcBBwPvAfcB7QHs
+        AesCbQHsAfcB7wL3AQcBrgU4CSgB9wEHA+8B9wHtAewB6wJtAewB9wHvAvcBBwGuBSggAAr5AYYBrgLt
+        A/gB7AHtAfcB7wEHAe4B8AG8AQcB7QX5CjgBhgGuAu0D+AHsAe0B9wHvAQcB7gHwAbwBBwHtBTgKKAGG
+        Aa4C7QP4AewB7QH3Ae8BBwHuAfABvAEHAe0FKCAADPkBrgHtAewC7QHvAQcDvAEHAbUCBwHtBfkMOAGu
+        Ae0B7ALtAe8BBwO8AQcBtQIHAe0FOAwoAa4B7QHsAu0B7wEHA7wBBwG1AgcB7QUoIAAI+QGGAa4B7QGS
+        AhwB7wMHAbUBzwKnAoUBzwG8AZIF+Qg4AYYBrgHtAZICHAHvAwcBtQHPAqcChQHPAbwBkgU4CCgBhgGu
+        Ae0BkgIcAe8DBwG1Ac8CpwKFAc8BvAGSBSggAAP5Aa4B7AHtAe8FBwHvAbUBzwGGAqYDhQKmAccBzwHw
+        AfcF+QM4Aa4B7AHtAe8FBwHvAbUBzwGGAqYDhQKmAccBzwHwAfcFOAMoAa4B7AHtAe8FBwHvAbUBzwGG
+        AqYDhQKmAccBzwHwAfcFKCAAAvkB7QEcAe8DBwG1Aa4ChgGFAQQChQGmBqcBxwHPAfAB9wX5AjgB7QEc
+        Ae8DBwG1Aa4ChgGFAQQChQGmBqcBxwHPAfAB9wU4AigB7QEcAe8DBwG1Aa4ChgGFAQQChQGmBqcBxwHP
+        AfAB9wUoIAAB+QHPAvcBtQGuAYYFBASFCKcBrQG8Ae8F+QE4Ac8C9wG1Aa4BhgUEBIUIpwGtAbwB7wU4
+        ASgBzwL3AbUBrgGGBQQEhQinAa0BvAHvBSggAAL5AfcIBASFAaYBpwitAbwB7wGnBPkCOAH3CAQEhQGm
+        AacIrQG8Ae8BpwQ4AigB9wgEBIUBpgGnCK0BvAHvAacEKCAAAvkB7wKmAYYCpgIEBYUBxwGtCM8BvAEH
+        Aa4E+QI4Ae8CpgGGAqYCBAWFAccBrQjPAbwBBwGuBDgCKAHvAqYBhgKmAgQFhQHHAa0IzwG8AQcBrgQo
+        IAAC+QHvBYYBpgWFAaEBxwbPA+YB7gEHAa4E+QI4Ae8FhgGmBYUBoQHHBs8D5gHuAQcBrgQ4AigB7wWG
+        AaYFhQGhAccGzwPmAe4BBwGuBCggAAL5Ae8BrgSGBYUCoQGnArQG1QHmAQkB7gHtBPkCOAHvAa4EhgWF
+        AqEBpwK0BtUB5gEJAe4B7QQ4AigB7wGuBIYFhQKhAacCtAbVAeYBCQHuAe0EKCAAAvkB7wGuBIYEhQGh
+        AccBoQGtCNYB1QEJAbwB7QT5AjgB7wGuBIYEhQGhAccBoQGtCNYB1QEJAbwB7QQ4AigB7wGuBIYEhQGh
+        AccBoQGtCNYB1QEJAbwB7QQoIAAC+QHvAe0BhgGuAYsBpgOFAaECxwGhAc8K1gHwAfcE+QI4Ae8B7QGG
+        Aa4BiwGmA4UBoQLHAaEBzwrWAfAB9wQ4AigB7wHtAYYBrgGLAaYDhQGhAscBoQHPCtYB8AH3BCggAAL5
+        AbUB9wGGAc8BrQSFAaEDxwHVCAkB3AHWAfAB9wT5AjgBtQH3AYYBzwGtBIUBoQPHAdUICQHcAdYB8AH3
+        BDgCKAG1AfcBhgHPAa0EhQGhA8cB1QgJAdwB1gHwAfcEKCAAAvkBzwHvAYYBzwGGA4UFxwHWAd0GCQHd
+        AgkB8QH3BPkCOAHPAe8BhgHPAYYDhQXHAdYB3QYJAd0CCQHxAfcEOAIoAc8B7wGGAc8BhgOFBccB1gHd
+        BgkB3QIJAfEB9wQoIAAD+QHvAYYBzwGmAoUFxwHIAQkJ3QEJAfEB7wHPA/kDOAHvAYYBzwGmAoUFxwHI
+        AQkJ3QEJAfEB7wHPAzgDKAHvAYYBzwGmAoUFxwHIAQkJ3QEJAfEB7wHPAyggAAP5Ae8BhgGtAoUFxwFC
+        Ac4F3QUZAQkB8QHvAa4D+QM4Ae8BhgGtAoUFxwFCAc4F3QUZAQkB8QHvAa4DOAMoAe8BhgGtAoUFxwFC
+        Ac4F3QUZAQkB8QHvAa4DKCAAA/kB7wKGAoUFxwFCAdUKGQEJAfIBBwGuA/kDOAHvAoYChQXHAUIB1QoZ
+        AQkB8gEHAa4DOAMoAe8ChgKFBccBQgHVChkBCQHyAQcBrgMoIAAD+QHvAYYChQGhBccBQgHWAfQFGQT0
+        ARkB8QG8Aa4D+QM4Ae8BhgKFAaEFxwFCAdYB9AUZBPQBGQHxAbwBrgM4AygB7wGGAoUBoQXHAUIB1gH0
+        BRkE9AEZAfEBvAGuAyggAAP5Ae8BiwKFAaEExwFCAcgB3Qf0AxkBCQHdAfEB7QP5AzgB7wGLAoUBoQTH
+        AUIByAHdB/QDGQEJAd0B8QHtAzgDKAHvAYsChQGhBMcBQgHIAd0H9AMZAQkB3QHxAe0DKCAAA/kBtQGu
+        AoUFxwH8Ac4CGQTdBgkB8QHzAe0D+QM4AbUBrgKFBccB/AHOAhkE3QYJAfEB8wHtAzgDKAG1Aa4ChQXH
+        AfwBzgIZBN0GCQHxAfMB7QMoIAAD+QG1AZIChQOhAscBpwGtAbUCCQG7Ae4DvAHuAQcEtQT5AzgBtQGS
+        AoUDoQLHAacBrQG1AgkBuwHuA7wB7gEHBLUEOAMoAbUBkgKFA6ECxwGnAa0BtQIJAbsB7gO8Ae4BBwS1
+        BCggAAP5Ac8B9wKGAs8CtQIHAu4CBwS1Ac8K+QM4Ac8B9wKGAs8CtQIHAu4CBwS1Ac8KOAMoAc8B9wKG
+        As8CtQIHAu4CBwS1Ac8KKCAAA/kBzwUHA7UBzxP5AzgBzwUHA7UBzxM4AygBzwUHA7UBzxMoIAAg+SA4
+        ICggAAFCAU0BPgcAAT4DAAEoAwABgAMAASADAAEBAQABAQYAAQIWAAP//wD/AAMACw==
+</value>
+  </data>
 </root>
