Hive Client Console Forms w/o services (#397)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@906 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
+++ b/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
@@ -117,10 +117,65 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="msClientConsole.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="lvJobDetail.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ilEventLog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="performanceCounter1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>150, 17</value>
+  <data name="ilEventLog.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
+        CgAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABECoAAUICAQF0ASACAwHxAwMB/wFCAgMB1AEgAgEBLCwAAUICAQF0ASACAwHx
+        AwMB/wFCAgMB1AEgAgEBLKQAAR0CAwHyAZMBXQEDAf8BvwF2AQMB/wG9AXMBAwH/AboBcAEDAf8BuAFt
+        AQMB/wG2AWsBAwH/ATcBIAEDAf8BPAIBAWUcAAEdAgMB8gIDAaQB/wIDAdYB/wIDAdQB/wIDAdIB/wID
+        AdAB/wIDAc4B/wIDAT4B/wE8AgEBZZgAAQ0BCQEDAf8BxwF+AQMB/wHDAXsBAwH/AbEBZQEDAf8BsQFl
+        AQMB/wGxAWUBAwH/AbEBZQEDAf8BswFnAQMB/wG2AWsBAwH/AbQBaAEDAf8BMwIDAeQUAAIDAQ4B/wID
+        AdwB/wIDAdkB/wIDAcoB/wIDAcoB/wIDAcoB/wIDAcoB/wIDAcsB/wIDAc4B/wIDAcwB/wEzAgMB5JAA
+        AwMB/wHLAYEBAwH/AbsBcQEDAf8BtgFrAQMB/wG2AWsBAwH/Ae4B3AHEBf8BvgF8ASAB/wG2AWsBAwH/
+        AbYBawEDAf8BtgFrAQMB/wG0AWgBAwH/AUgCAgGGDAADAwH/AgMB4AH/AgMB0gH/AgMBzgH/AjAB1gH/
+        AgMBzgH/AgMBzgH/AgMBzgH/AgYBzgH/AgMBzgH/AgMBzgH/AgMBzAH/AUgCAgGGiAABLAIBAUIB0AGG
+        AQMB/wHHAX4BAwH/AboBcAEDAf8BugFwAQMB/wG6AXABAwH/AdABnAFUBf8BugFwAQMB/wG6AXABAwH/
+        AboBcAEDAf8BugFwAQMB/wG2AWsBAwH/AVcBMgEDAf8IAAEsAgEBQgIDAeQB/wIDAdwB/wIDAdIB/wKf
+        Ae0F/wJJAd4B/wIDAdIB/wL0Af0F/wIGAdIB/wIDAdIB/wIDAc4B/wIDAWIB/4gAAwMB/wHSAYkBAwH/
+        Ab8BdgEDAf8BvwF2AQMB/wG/AXYBAwH/Ab8BdgEDAf8B0wGfAVQF/wG/AXYBAwH/Ab8BdgEDAf8BvwF2
+        AQMB/wG/AXYBAwH/Ab4BdQEDAf8BtgFrAQMB/wE2AgEBVwQAAwMB/wIDAeUB/wIDAdYB/wIDAdYN/wL1
+        Af0J/wLiAfoB/wIDAdYB/wIDAdUB/wIDAc4B/wE2AgEBV4QAAUsBMwEDAf8B1AGMAQMB/wHEAXsBAwH/
+        AcQBewEDAf8BxAF7AQMB/wHEAXsBAwH/AdcBpAFVBf8BxAF7AQMB/wHEAXsBAwH/AcQBewEDAf8BxAF7
+        AQMB/wHEAXsBAwH/AbgBbQEDAf8BKgIDAewEAAIDAVEB/wIDAegB/wIDAdoB/wIDAdoB/wIDAdoR/wLi
+        AfoB/wIDAdoB/wIDAdoB/wIDAdoB/wIDAdAB/wEqAgMB7IQAAWsBSAEDAf8B1wGOAQMB/wHJAYEBAwH/
+        AckBgQEDAf8ByQGBAQMB/wHJAYEBAwn/AckBgQEDAf8ByQGBAQMB/wHJAYEBAwH/AckBgQEDAf8ByQGB
+        AQMB/wG6AXABAwH/AwMB/wQAAgMBdAH/AgMB6QH/AgMB3gH/AgMB3gH/AgMB3gH/AvQB/Q3/AkkB5wH/
+        AgMB3gH/AgMB3gH/AgMB3gH/AgMB0gH/AwMB/4QAAVsBOQEDAf8B2QGRAQMB/wHOAYMBAwH/Ac4BgwED
+        Af8BzgGDAQMB/wHOAYMBAwH/Ac4BgwEDAf8B1wGcATQB/wHOAYMBAwH/Ac4BgwEDAf8BzgGDAQMB/wHO
+        AYMBAwH/Ac4BgwEDAf8BvQFzAQMB/wESAgMB+QQAAQMBCAFaAf8CAwHsAf8CAwHiAf8CAwHiAf8C9AH9
+        Ff8CSQHqAf8CAwHiAf8CAwHiAf8CAwHUAf8BEgIDAfmEAAEGAQQBAwH/AdsBlAEDAf8B0gGJAQMB/wHS
+        AYkBAwH/AdIBiQEDAf8B0gGJAQMB/wHSAYkBAwH/AesBywGQAf8B0gGJAQMB/wHSAYkBAwH/AdIBiQED
+        Af8B0gGJAQMB/wHEAXwBAwH/Ab8BdgEDAf8BTQICAZsEAAIDAQYB/wIDAe0B/wIDAeYB/wIDAeUB/wL9
+        Af4F/wLiAfwB/wIDAeUJ/wJ0AfEB/wIDAeUB/wIDAdoB/wIDAdYB/wFNAgIBm4QAAU4CAgGyAd4BmAED
+        Af8B2wGUAQMB/wHXAY4BAwH/AdcBjgEDAf8B1wGOAQMB/wH7AfYB6wX/AdcBjgEDAf8B1wGOAQMB/wHX
+        AY4BAwH/AdYBjQEDAf8BxAF7AQMB/wGpAWQBAwH/CAABTgICAbIBAwENAe8B/wIDAe0B/wIDAekB/wID
+        AekB/wLhAfwB/wIDAekB/wIDAekB/wIDAekB/wJ0AfMB/wIDAekB/wIDAegB/wIDAdoB/wEDAQsBnQH/
+        jAABPQEiAQMB/wHdAZcBAwH/AdsBlAEDAf8B2wGUAQMB/wHbAZQBAwH/AdsBlAEDAf8B3AGXAQkB/wHb
+        AZQBAwH/AdsBlAEDAf8B1QGMAQMB/wHJAYEBAwH/AdEBiAEDAf8BCQIDAfwMAAIDATcB/wIDAe8B/wID
+        Ae0B/wIDAe0B/wIDAe0B/wIDAe0B/wIDAe0B/wIDAe0B/wIDAe0B/wIDAegB/wIDAd4B/wEDARYB4gH/
+        AQkCAwH8jAABGQIBASEBkAFXAQMB/wHfAZkBAwH/AdsBlAEDAf8B2QGRAQMB/wHYAZABAwH/AdgBkAED
+        Af8B0wGKAQMB/wHQAYYBAwH/Ac4BgwEDAf8B2gGSAQMB/wEOAQkBAwH/EAABGQIBASECAwGHAf8BAwEJ
+        AfEB/wIDAe0B/wIDAewB/wIDAesB/wIDAesB/wIDAeYB/wIDAeQB/wIDAeIB/wEDASAB5gH/AgMBDQH/
+        lAABEgIBARYBKAEaAQMB/wHSAYkBAwH/AeIBnQEDAf8B2QGRAQMB/wHXAY4BAwH/AdUBjAEDAf8B4QGb
+        AQMB/wHOAYQBAwH/AQYCAwH+GAABEgIBARYCAwEnAf8BAwEJAdMB/wEDARoB9AH/AgMB7AH/AgMB6QH/
+        AQMBBAHoAf8BAwEiAfAB/wIDAcwB/wEGAgMB/qAAAUUCAQF9AwMB/wFUATsBAwH/AXUBVAEDAf8BNQEm
+        AQMB/wEGAgMB/gEUAgEBGiQAAUUCAQF9AwMB/wIDAVcB/wIDAXwB/wIDATcB/wEGAgMB/gEUAgEBGv8A
+        kQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfwBHwH8AR8EAAHwAQcB8AEH
+        BAAB4AEDAeABAwQAAcABAQHAAQEEAAGAAQEBgAEBBAABgAEAAYAFAAGAAQABgAUAAYABAAGABQABgAEA
+        AYAFAAGAAQABgAUAAYABAQGAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAeABBwHgAQcEAAH4AQ8B+AEP
+        BAAE/wQACw==
+</value>
+  </data>
+  <metadata name="lvJobDetail.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
 </root>
