Implementation of UserRoleManager (#417)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@947 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
+++ b/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
@@ -141,7 +141,7 @@
   <data name="Communicator.LogoutSuccess" xml:space="preserve">
     <value>You where logged out successfully. Good bye</value>
   </data>
-  <data name="Logout.UserAllreadyOnline" xml:space="preserve">
+  <data name="Communicator.LogoutUserAllreadyOnline" xml:space="preserve">
     <value>A User with this GUID is allready logged in</value>
   </data>
   <data name="UserRole.AllUserGroupsReturned" xml:space="preserve">
