Implementation of UserRoleManager (#417)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@969 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
+++ b/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
@@ -213,4 +213,7 @@
   <data name="JobDoesntExist" xml:space="preserve">
     <value>The specified job doesn't exist</value>
   </data>
+  <data name="UserRole.UsernameExistsAllready" xml:space="preserve">
+    <value>A user with this username exists allready</value>
+  </data>
 </root>
