--- a/sources/HeuristicLab.Hive.Server.Console/HiveServerManagementConsole.resx
+++ b/sources/HeuristicLab.Hive.Server.Console/HiveServerManagementConsole.resx
@@ -120,6 +120,9 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="cmsAddDelete.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>231, 22</value>
+  </metadata>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>126, 17</value>
   </metadata>
@@ -214,4 +217,86 @@
         FywEQANpAkYXQCAAAUIBTQE+BwABPgMAASgDAAGAAwABIAMAAQEBAAEBBgABAhYAA///AP8AAwAL
 </value>
   </data>
+  <metadata name="imageList2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>353, 22</value>
+  </metadata>
+  <data name="imageList2.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD4
+        DwAAAk1TRnQBSQFMAwEBAAEEAQABBAEAATABAAEwAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        AcADAAEwAwABAQEAAQgGAAEkGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
+        AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
+        AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
+        AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
+        AgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFm
+        AgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEz
+        AQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFm
+        AgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFm
+        AQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEA
+        ATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFm
+        AQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFm
+        ATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFm
+        AQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEA
+        AWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZ
+        AQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEz
+        AQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/
+        AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEA
+        AZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHM
+        AQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFm
+        ATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZ
+        AQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/
+        ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHM
+        ATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJm
+        AQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHM
+        AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
+        AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
+        ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA//gAAihuAAIobIAAqEChQGm
+        CoYBpgGFAqGqAAOhAqcChgGLAa4BzwW0Aq4CiwKGAccDoacAAaEBhQEEAa4BtQoJAbsBCQG7AbUCtAGL
+        AaYCoaUAAaEBhQGGAYsBzwG1AgkDuwQJArsCtQW0AYYBhQGhpAACoQGGAYsCtAMJAbsCtQa7ArUDtAG1
+        AbQBiwEEAqGjAAGFAYYBtAK7AbQBuwEHAQkBuwG1ArsDCQO7ArUEtAGLAQQBhQGhmAAIoQMAAaYBrQG1
+        ArsBtAG1AQcB3QS7BAkDuwG1BLQBiwEEAYUBoZIAEaEBhgGtAbsBCQG1AbQBtQEHARkBCQK7BgkCuwG1
+        BLQBiwEEAqGSAAOhAoULBAGFAYYBiwG7AQkBuwG1Ae8BBwHzAgkBuwYJArsCtQK0AZEBhgGFAqGRAAKh
+        AYYBZgFsAeoBbQLqAW0C6gJtAesB6gESARMBbAGuAbUBCQG7ArUBBwHzAd0BCQG7BwkCuwG1ArQBrgGG
+        A6GQAAKhAYYB6ghyAVACcwGSAXMCUAFyAZEBtAG7AQkBuwG1AQcB8wEZCQkCuwG1ArQBiwGGAqGRAAGh
+        AYYBbQR4BXMBcgFzARwB7wJzAVABcgGRAbQCCQG7AbUBBwHzAfQBGQgJArsBtQK0AYYBhZMAAaEBiwFy
+        AngHcwFyAXMBHAHvARwBcwFQAnIBtAMJAbUB7wG8AvAICQK7AbUCtAGnAaGTAAGhAa4BcwJ4AnMDeAJz
+        AXIBHAHvAQcBHAFzAVEBUAFyAZEBuwHcAQkBuwH3AxwB7wK7BAkDuwK0AYsBpwGhkwABoQGuAXMIeAJz
+        AZgBBwG8ARwCcwFQAnIBuwEJARkBuwHsBEsB7AG1AbsCCQS7AbQBiwGFAaGUAAGhAYsB7QGYCXgBCAHw
+        AbwBmAFzAXgBcwJyAZEBuwHcAbUB7AFLAkoCSwHsAZIBtQMJAbUBtAGtAacCoZQAAaEBiwHtAZkIeAGY
+        AQgB8QEIAZgBcwF4AXMBcgFQAXIBkQK0AewBSwFKA0QBSwHsAZEBtAG1AbQBzwGtAacBoZcAAYYB7AGf
+        AZgHeAGYAcIB8QEHAZgCeAFzAXICUAHqAYsC6wFLAUoDRAFKAUsB7AGRAbQBiwGGAqGYAAHHAa4CmQGY
+        BngBHAEHAe8BHAFzAnIBcwNyAeoBEgHqAUoBSwJKAkQBSgFLAW0BiwKnA6GYAAGhAYYBkgGYAZkEeAJz
+        ARwBkwEcAXMCcgFQBHIB6gJKBEsBSgFEAUoBSwFmAYYCoZwAAaEBhgGSAZkBmAN4AnMDdAFzAW0BSgFQ
+        A3ICbQdLA0oBhgGhngACoQGLAewDeAFyAnMCdAJzA0oB6gFsAYsBbQFuCEsCSgGGAaGeAAKhAacBiwGR
+        AnIBUAJzAXQBcwJuAeoBEwEUA4YBrgVuBUsB6gGGAaGhAAGhAacBbAHqAUoFbgHqAWYBZQEEAqEBpwGN
+        BXMCbgNLAUoBhgGhoQACoQFmARIBSgFLAW4CdAFuAW0DZgGFAaEBhgHsBXQBcwJuA0sBEgGGAqGfAAGh
+        AYUBZgESAUoBSwFzA3QBbgFtARMBFAFmAYUBhgHsBnQBcwJuAksBRAFmAYYBoZ4AAaEBhQFmAeoCSwFz
+        AXQCkwN0AUsBSgFmAWABhgHsAZMGdAFzAW4CSwFKARQBhgGhngABoQGGAW4DSwF0AZMBmQOTAXQBcwFL
+        AmYBhgHtApkCkwR0AW4BSwFKAUQBFAFmAYWeAAGFAWYBcwJLAXMBkwWZAZMBdAFLAmYBhgGSBJkBkwN0
+        AW4BSgETARQBFQEUAYUBoZ0AAYYB6gF0AksBdAGZA5oDmQF0AUsBZgKGAfcCmgOZA3QBbgFKAxUBFAGG
+        AaGdAAGGAeoBdAFRAXMBmQWaApkBdAHqAYYCpwHvBJoBmQGTAnQBbgFKAxUBFAGGAaGdAAGGAW0BdAFz
+        AXQBmgMaA5oBmQEcARIBhgGhAacB9wWZAZMCdAFuARIDFQEUAYUBoZ0AAYYBbQJ0AZMFGgKaAZkBHAFn
+        AaICoQHPARwBdAKTAnQBcwFuAeoBEwEUAhUBZgGFngABhgFtA3QBGgPDARoCmgGZARwBEgGGAaEBpwGu
+        BuwB6wFtAeoBEgETAhUBZgGhngABogGuAXQBcwF0AZkBGgLDAhoBmgGZARwBEgGGAaEBpwGuBewB6wFt
+        AuoBEgETARUBZgGGAaGeAAGhAYYBdAJzARwCGgHDAhoBmgGZAXQBZwGiAqEBzwGuA+wC6wJtAeoBEgIU
+        AWYBpwGhngABoQGGAewBHAJ0AXMDdAOTAXMBEwGGAqEDpwKuAusCbQLqAWYChgKhngABoQGnAa4BHAGZ
+        AXQBcwJRAnMBdAFzAW4BRAFmAYUDoQKnCIYBpwGhoQABoQGGAe8BGgKZAXQBcwFRA0sBSgFLAUQBZgGF
+        AaEFAAWhpAACoQGvAbwBGgGaApkBeQV0AVEBEgEEAaEFAAShpQACoQGnAbUBvAEaBJkBeQIcAXMB6wGM
+        AYUBobAAAaEBpwHPAfcB7wOZARwBcwHrAa4BhgGhsgACoQOnBYYCpwKhtQAIof8AbwABQgFNAT4HAAE+
+        AwABKAMAAcADAAEwAwABAQEAAQEFAAGAAQQWAAP/AQAG/xIAA/8B/gEBAf8SAAP/Af4BAQH/EgAD/wGA
+        AQABDxIAAv8B/AIAAQESAAL/AfwCAAEBEgAC/wHwAgABARIAAv8B4BUAAv8B4BUAAf8BAAHgFQABwBcA
+        AcAXAAGAHAABARcAAQcXAAEHFwABBxcAAQ8XAAEPFwABPxIAAYAEAAF/EgABgAQAAX8SAAGAAwABAwH/
+        EgABwAMAAQ8B/xIAAcADAAEPAf8SAAHAAwABDwH/EgAB+AMAAQ8B/xIAAfgDAAEDAf8SAAH4AwABAwH/
+        EgAB8AMAAQMB/xIAAfADAAEDAf8SAAHwAwABAQH/EgAB8AMAAQEB/xIAAfADAAEBAf8SAAHwAwABAQH/
+        EgAB8AMAAQMB/xIAAfADAAEDAf8SAAHwAwABAwH/EgAB8AMAAQMB/xIAAfADAAEDAf8SAAHwAwABDwH/
+        EgAB+AEAAQEB8AF/Af8SAAH4AQABAQHwAv8SAAH4AQABAQP/EgAB/gEAAQcD/xIAAf4BAAEHA/8SAAH/
+        AcABPwP/EgAG/xIACw==
+</value>
+  </data>
+  <metadata name="directorySearcher1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>458, 22</value>
+  </metadata>
 </root>
