added new features (#397)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1002 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
+++ b/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
@@ -126,50 +126,53 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
         CgAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AUECCAHxAwgB/wFdAgMB1AEgAgEBLCwAAUMCAQF0AUECCAHx
-        AwgB/wFdAgMB1AEgAgEBLKQAAT0CCAHyAZMBYgEIAf8BvwF7AQgB/wG9AXgBCAH/AboBdQEIAf8BuAFy
-        AQgB/wG2AXABCAH/ATwBJQEIAf8BPQIBAWUcAAE9AggB8gIIAaQB/wIIAdYB/wIIAdQB/wIIAdIB/wII
-        AdAB/wIIAc4B/wIIAUMB/wE9AgEBZZgAARIBDgEIAf8BxwGBAQgB/wHDAYABCAH/AbEBagEIAf8BsQFq
-        AQgB/wGxAWoBCAH/AbEBagEIAf8BswFsAQgB/wG2AXABCAH/AbQBbQEIAf8BVQIFAeQUAAIIARMB/wII
-        AdwB/wIIAdkB/wIIAcoB/wIIAcoB/wIIAcoB/wIIAcoB/wIIAcsB/wIIAc4B/wIIAcwB/wFVAgUB5JAA
-        AwgB/wHLAYEBCAH/AbsBdgEIAf8BtgFwAQgB/wG2AXABCAH/Ae4B3AHEBf8BvgGBASUB/wG2AXABCAH/
-        AbYBcAEIAf8BtgFwAQgB/wG0AW0BCAH/AUkCAgGGDAADCAH/AggB4AH/AggB0gH/AggBzgH/AjUB1gH/
-        AggBzgH/AggBzgH/AggBzgH/AgsBzgH/AggBzgH/AggBzgH/AggBzAH/AUkCAgGGiAABLAIBAUIB0AGG
-        AQgB/wHHAYEBCAH/AboBdQEIAf8BugF1AQgB/wG6AXUBCAH/AdABnAFZBf8BugF1AQgB/wG6AXUBCAH/
-        AboBdQEIAf8BugF1AQgB/wG2AXABCAH/AVwBNwEIAf8IAAEsAgEBQgIIAeQB/wIIAdwB/wIIAdIB/wKf
-        Ae0F/wJOAd4B/wIIAdIB/wL0Af0F/wILAdIB/wIIAdIB/wIIAc4B/wIIAWcB/4gAAwgB/wHSAYkBCAH/
-        Ab8BewEIAf8BvwF7AQgB/wG/AXsBCAH/Ab8BewEIAf8B0wGfAVkF/wG/AXsBCAH/Ab8BewEIAf8BvwF7
-        AQgB/wG/AXsBCAH/Ab4BegEIAf8BtgFwAQgB/wE2AgEBVwQAAwgB/wIIAeUB/wIIAdYB/wIIAdYN/wL1
-        Af0J/wLiAfoB/wIIAdYB/wIIAdUB/wIIAc4B/wE2AgEBV4QAAVABOAEIAf8B1AGMAQgB/wHEAYABCAH/
-        AcQBgAEIAf8BxAGAAQgB/wHEAYABCAH/AdcBpAFaBf8BxAGAAQgB/wHEAYABCAH/AcQBgAEIAf8BxAGA
-        AQgB/wHEAYABCAH/AbgBcgEIAf8BTQIHAewEAAIIAVYB/wIIAegB/wIIAdoB/wIIAdoB/wIIAdoR/wLi
-        AfoB/wIIAdoB/wIIAdoB/wIIAdoB/wIIAdAB/wFNAgcB7IQAAXABTQEIAf8B1wGOAQgB/wHJAYEBCAH/
-        AckBgQEIAf8ByQGBAQgB/wHJAYEBCAn/AckBgQEIAf8ByQGBAQgB/wHJAYEBCAH/AckBgQEIAf8ByQGB
-        AQgB/wG6AXUBCAH/AwgB/wQAAggBeQH/AggB6QH/AggB3gH/AggB3gH/AggB3gH/AvQB/Q3/Ak4B5wH/
-        AggB3gH/AggB3gH/AggB3gH/AggB0gH/AwgB/4QAAWABPgEIAf8B2QGRAQgB/wHOAYMBCAH/Ac4BgwEI
-        Af8BzgGDAQgB/wHOAYMBCAH/Ac4BgwEIAf8B1wGcATkB/wHOAYMBCAH/Ac4BgwEIAf8BzgGDAQgB/wHO
-        AYMBCAH/Ac4BgwEIAf8BvQF4AQgB/wEjAggB+QQAAQgBDQFfAf8CCAHsAf8CCAHiAf8CCAHiAf8C9AH9
-        Ff8CTgHqAf8CCAHiAf8CCAHiAf8CCAHUAf8BIwIIAfmEAAELAQkBCAH/AdsBlAEIAf8B0gGJAQgB/wHS
-        AYkBCAH/AdIBiQEIAf8B0gGJAQgB/wHSAYkBCAH/AesBywGQAf8B0gGJAQgB/wHSAYkBCAH/AdIBiQEI
-        Af8B0gGJAQgB/wHEAYEBCAH/Ab8BewEIAf8BUQICAZsEAAIIAQsB/wIIAe0B/wIIAeYB/wIIAeUB/wL9
-        Af4F/wLiAfwB/wIIAeUJ/wJ5AfEB/wIIAeUB/wIIAdoB/wIIAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEI
-        Af8B2wGUAQgB/wHXAY4BCAH/AdcBjgEIAf8B1wGOAQgB/wH7AfYB6wX/AdcBjgEIAf8B1wGOAQgB/wHX
-        AY4BCAH/AdYBjQEIAf8BxAGAAQgB/wGpAWkBCAH/CAABWAICAbIBCAESAe8B/wIIAe0B/wIIAekB/wII
-        AekB/wLhAfwB/wIIAekB/wIIAekB/wIIAekB/wJ5AfMB/wIIAekB/wIIAegB/wIIAdoB/wEIARABnQH/
-        jAABQgEnAQgB/wHdAZcBCAH/AdsBlAEIAf8B2wGUAQgB/wHbAZQBCAH/AdsBlAEIAf8B3AGXAQ4B/wHb
-        AZQBCAH/AdsBlAEIAf8B1QGMAQgB/wHJAYEBCAH/AdEBiAEIAf8BGAIIAfwMAAIIATwB/wIIAe8B/wII
-        Ae0B/wIIAe0B/wIIAe0B/wIIAe0B/wIIAe0B/wIIAe0B/wIIAe0B/wIIAegB/wIIAd4B/wEIARsB4gH/
-        ARgCCAH8jAABGQIBASEBkAFcAQgB/wHfAZkBCAH/AdsBlAEIAf8B2QGRAQgB/wHYAZABCAH/AdgBkAEI
-        Af8B0wGKAQgB/wHQAYYBCAH/Ac4BgwEIAf8B2gGSAQgB/wETAQ4BCAH/EAABGQIBASECCAGHAf8BCAEO
-        AfEB/wIIAe0B/wIIAewB/wIIAesB/wIIAesB/wIIAeYB/wIIAeQB/wIIAeIB/wEIASUB5gH/AggBEgH/
-        lAABEgIBARYBLQEfAQgB/wHSAYkBCAH/AeIBnQEIAf8B2QGRAQgB/wHXAY4BCAH/AdUBjAEIAf8B4QGb
-        AQgB/wHOAYQBCAH/ARACCAH+GAABEgIBARYCCAEsAf8BCAEOAdMB/wEIAR8B9AH/AggB7AH/AggB6QH/
-        AQgBCQHoAf8BCAEnAfAB/wIIAcwB/wEQAggB/qAAAUYCAQF9AwgB/wFZAUABCAH/AXoBWQEIAf8BOgEr
-        AQgB/wEQAggB/gEUAgEBGiQAAUYCAQF9AwgB/wIIAVwB/wIIAYEB/wIIATwB/wEQAggB/gEUAgEBGv8A
+        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AUkCCQHxAwoB/wFfAgMB1AEgAgEBLCwAAUMCAQF0AUkCCQHx
+        AwoB/wFfAgMB1AEgAgEBLKQAAUcCCgHyAZMBZAEKAf8BvwF9AQoB/wG9AXoBCgH/AboBdwEKAf8BuAF0
+        AQoB/wG2AXIBCgH/AT4BJwEKAf8BPQIBAWUcAAFHAgoB8gIKAaQB/wIKAdYB/wIKAdQB/wIKAdIB/wIK
+        AdAB/wIKAc4B/wIKAUUB/wE9AgEBZZgAARQBEAEKAf8BxwGBAQoB/wHDAYEBCgH/AbEBbAEKAf8BsQFs
+        AQoB/wGxAWwBCgH/AbEBbAEKAf8BswFuAQoB/wG2AXIBCgH/AbQBbwEKAf8BWgIFAeQUAAIKARUB/wIK
+        AdwB/wIKAdkB/wIKAcoB/wIKAcoB/wIKAcoB/wIKAcoB/wIKAcsB/wIKAc4B/wIKAcwB/wFaAgUB5JAA
+        AwoB/wHLAYEBCgH/AbsBeAEKAf8BtgFyAQoB/wG2AXIBCgH/Ae4B3AHEBf8BvgGBAScB/wG2AXIBCgH/
+        AbYBcgEKAf8BtgFyAQoB/wG0AW8BCgH/AUkCAgGGDAADCgH/AgoB4AH/AgoB0gH/AgoBzgH/AjcB1gH/
+        AgoBzgH/AgoBzgH/AgoBzgH/Ag0BzgH/AgoBzgH/AgoBzgH/AgoBzAH/AUkCAgGGiAABLAIBAUIB0AGG
+        AQoB/wHHAYEBCgH/AboBdwEKAf8BugF3AQoB/wG6AXcBCgH/AdABnAFbBf8BugF3AQoB/wG6AXcBCgH/
+        AboBdwEKAf8BugF3AQoB/wG2AXIBCgH/AV4BOQEKAf8IAAEsAgEBQgIKAeQB/wIKAdwB/wIKAdIB/wKf
+        Ae0F/wJQAd4B/wIKAdIB/wL0Af0F/wINAdIB/wIKAdIB/wIKAc4B/wIKAWkB/4gAAwoB/wHSAYkBCgH/
+        Ab8BfQEKAf8BvwF9AQoB/wG/AX0BCgH/Ab8BfQEKAf8B0wGfAVsF/wG/AX0BCgH/Ab8BfQEKAf8BvwF9
+        AQoB/wG/AX0BCgH/Ab4BfAEKAf8BtgFyAQoB/wE2AgEBVwQAAwoB/wIKAeUB/wIKAdYB/wIKAdYN/wL1
+        Af0J/wLiAfoB/wIKAdYB/wIKAdUB/wIKAc4B/wE2AgEBV4QAAVIBOgEKAf8B1AGMAQoB/wHEAYEBCgH/
+        AcQBgQEKAf8BxAGBAQoB/wHEAYEBCgH/AdcBpAFcBf8BxAGBAQoB/wHEAYEBCgH/AcQBgQEKAf8BxAGB
+        AQoB/wHEAYEBCgH/AbgBdAEKAf8BUwIHAewEAAIKAVgB/wIKAegB/wIKAdoB/wIKAdoB/wIKAdoR/wLi
+        AfoB/wIKAdoB/wIKAdoB/wIKAdoB/wIKAdAB/wFTAgcB7IQAAXIBTwEKAf8B1wGOAQoB/wHJAYEBCgH/
+        AckBgQEKAf8ByQGBAQoB/wHJAYEBCgn/AckBgQEKAf8ByQGBAQoB/wHJAYEBCgH/AckBgQEKAf8ByQGB
+        AQoB/wG6AXcBCgH/AwoB/wQAAgoBewH/AgoB6QH/AgoB3gH/AgoB3gH/AgoB3gH/AvQB/Q3/AlAB5wH/
+        AgoB3gH/AgoB3gH/AgoB3gH/AgoB0gH/AwoB/4QAAWIBQAEKAf8B2QGRAQoB/wHOAYMBCgH/Ac4BgwEK
+        Af8BzgGDAQoB/wHOAYMBCgH/Ac4BgwEKAf8B1wGcATsB/wHOAYMBCgH/Ac4BgwEKAf8BzgGDAQoB/wHO
+        AYMBCgH/Ac4BgwEKAf8BvQF6AQoB/wEpAgoB+QQAAQoBDwFhAf8CCgHsAf8CCgHiAf8CCgHiAf8C9AH9
+        Ff8CUAHqAf8CCgHiAf8CCgHiAf8CCgHUAf8BKQIKAfmEAAENAQsBCgH/AdsBlAEKAf8B0gGJAQoB/wHS
+        AYkBCgH/AdIBiQEKAf8B0gGJAQoB/wHSAYkBCgH/AesBywGQAf8B0gGJAQoB/wHSAYkBCgH/AdIBiQEK
+        Af8B0gGJAQoB/wHEAYEBCgH/Ab8BfQEKAf8BUQICAZsEAAIKAQ0B/wIKAe0B/wIKAeYB/wIKAeUB/wL9
+        Af4F/wLiAfwB/wIKAeUJ/wJ7AfEB/wIKAeUB/wIKAdoB/wIKAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEK
+        Af8B2wGUAQoB/wHXAY4BCgH/AdcBjgEKAf8B1wGOAQoB/wH7AfYB6wX/AdcBjgEKAf8B1wGOAQoB/wHX
+        AY4BCgH/AdYBjQEKAf8BxAGBAQoB/wGpAWsBCgH/CAABWAICAbIBCgEUAe8B/wIKAe0B/wIKAekB/wIK
+        AekB/wLhAfwB/wIKAekB/wIKAekB/wIKAekB/wJ7AfMB/wIKAekB/wIKAegB/wIKAdoB/wEKARIBnQH/
+        jAABRAEpAQoB/wHdAZcBCgH/AdsBlAEKAf8B2wGUAQoB/wHbAZQBCgH/AdsBlAEKAf8B3AGXARAB/wHb
+        AZQBCgH/AdsBlAEKAf8B1QGMAQoB/wHJAYEBCgH/AdEBiAEKAf8BHgIKAfwMAAIKAT4B/wIKAe8B/wIK
+        Ae0B/wIKAe0B/wIKAe0B/wIKAe0B/wIKAe0B/wIKAe0B/wIKAe0B/wIKAegB/wIKAd4B/wEKAR0B4gH/
+        AR4CCgH8jAABGQIBASEBkAFeAQoB/wHfAZkBCgH/AdsBlAEKAf8B2QGRAQoB/wHYAZABCgH/AdgBkAEK
+        Af8B0wGKAQoB/wHQAYYBCgH/Ac4BgwEKAf8B2gGSAQoB/wEVARABCgH/EAABGQIBASECCgGHAf8BCgEQ
+        AfEB/wIKAe0B/wIKAewB/wIKAesB/wIKAesB/wIKAeYB/wIKAeQB/wIKAeIB/wEKAScB5gH/AgoBFAH/
+        lAABEgIBARYBLwEhAQoB/wHSAYkBCgH/AeIBnQEKAf8B2QGRAQoB/wHXAY4BCgH/AdUBjAEKAf8B4QGb
+        AQoB/wHOAYQBCgH/ARQCCgH+GAABEgIBARYCCgEuAf8BCgEQAdMB/wEKASEB9AH/AgoB7AH/AgoB6QH/
+        AQoBCwHoAf8BCgEpAfAB/wIKAcwB/wEUAgoB/qAAAUYCAQF9AwoB/wFbAUIBCgH/AXwBWwEKAf8BPAEt
+        AQoB/wEUAgoB/gEUAgEBGiQAAUYCAQF9AwoB/wIKAV4B/wIKAYEB/wIKAT4B/wEUAgoB/gEUAgEBGv8A
         kQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfwBHwH8AR8EAAHwAQcB8AEH
         BAAB4AEDAeABAwQAAcABAQHAAQEEAAGAAQEBgAEBBAABgAEAAYAFAAGAAQABgAUAAYABAAGABQABgAEA
         AYAFAAGAAQABgAUAAYABAQGAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAeABBwHgAQcEAAH4AQ8B+AEP
         BAAE/wQACw==
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
