Implementation of ClientCommunicator, pullJob sendHeartbeat (#399)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1004 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
+++ b/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
@@ -216,4 +216,10 @@
   <data name="UserRole.UsernameExistsAllready" xml:space="preserve">
     <value>A user with this username exists allready</value>
   </data>
+  <data name="Communicator.IdMustNotBeSet" xml:space="preserve">
+    <value>The id must not be set in this context</value>
+  </data>
+  <data name="Communicator.NoJobWithThisId" xml:space="preserve">
+    <value>There exists no job with this id</value>
+  </data>
 </root>
