Implementation of JobManager (#431)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1024 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
+++ b/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
@@ -222,4 +222,7 @@
   <data name="Communicator.NoJobWithThisId" xml:space="preserve">
     <value>There exists no job with this id</value>
   </data>
+  <data name="Job.JobStateMustBeOffline" xml:space="preserve">
+    <value>The state of the job must be offline</value>
+  </data>
 </root>
