--- a/sources/HeuristicLab.Hive.Server.Console/HiveServerManagementConsole.resx
+++ b/sources/HeuristicLab.Hive.Server.Console/HiveServerManagementConsole.resx
@@ -348,4 +348,7 @@
   <metadata name="timerSyncronize.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>341, 9</value>
   </metadata>
+  <metadata name="bindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>580, 13</value>
+  </metadata>
 </root>
