Implementing Lifecycle Management (#453)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1096 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
+++ b/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
@@ -225,4 +225,7 @@
   <data name="Job.JobStateMustBeOffline" xml:space="preserve">
     <value>The state of the job must be offline</value>
   </data>
+  <data name="Communicator.UserNotLoggedIn" xml:space="preserve">
+    <value>User is not logged in, you must login before sending Heartbeats</value>
+  </data>
 </root>
