--- a/sources/HeuristicLab.ES/ESEditor.resx
+++ b/sources/HeuristicLab.ES/ESEditor.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>7, 3</value>
   </metadata>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>7, 3</value>
+  </metadata>
   <data name="initialMutationStrengthVectorTextBox.ToolTip" xml:space="preserve">
     <value>Enter a pattern that is used to generate the initial strategy vector.
 This can be a single number, or a pattern of numbers which is used until the dimension is reached.
